--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
 name = "aidk"
-version = "0.1.4"
+version = "0.2.0"
+authors = ["Knoxius <knox.dev@proton.me>"]
+license = "WTFPL"
+description = "Actually I Don't Know"
+readme = "README"
+homepage = "https://github.com/Knoxius/aidk/"
+repository = "https://github.com/Knoxius/aidk/"
+keywords = ["cli"]
+categories = ["fun"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
