--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aidk"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Knoxius <knox.dev@proton.me>"]
 license = "WTFPL"
 description = "Actually I Don't Know"
@@ -14,5 +14,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1"
 indicatif = "0.17.1"
 clap = { version = "4.0", features = ["derive"] }
+
+[dev.dependencies]
+anyhow = "1"
